clang/test/BSC/Negative/Generic/Typealias/typealias_in_function_body/typealias_in_function_body.cbs
// RUN: %clang_cc1  -verify %s

void foo1() {
    typedef MyType<T> = T; // expected-error{{BSC generic typealias cannot be declared within a function}}
}

void foo2<T>() {
    typedef MyType1<T> = T; // expected-error{{no template named 'MyType1'}} expected-error{{expected identifier or '('}} 
    typedef MyType2<T1> = T1;// expected-error{{BSC generic typealias cannot be declared within a function}}
}

int main() {
    foo1();
    foo2<int>();
    return 0;
}